Fix Bug 1269700 - text overlapping in German Version on the Smarton site

--- a/media/css/teach/smarton.less
+++ b/media/css/teach/smarton.less
@@ -1660,6 +1660,7 @@ body.not-firefox .footer-cta {
     }
 
     .inner {
+        opacity: 0;
         padding-top: 220px;
     }
 
